plugins {
	id 'java'
	id 'idea'
	id 'org.springframework.boot' version '3.0.5'
	id 'io.spring.dependency-management' version '1.1.0'
}

java {
	sourceCompatibility = 19
	targetCompatibility = 19
}

group = 'wonderland'

ext.buildNumber = {
	def buildNumber = System.getenv('VERSION')
	if (buildNumber == null || buildNumber.allWhitespace) {
		buildNumber = 'beta'
	}
	return buildNumber
}

project.version = buildNumber()

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

ext {
	set('springCloudVersion', "2022.0.1")
}

dependencies {
	implementation 'org.springframework.cloud:spring-cloud-starter'
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation "org.springframework.cloud:spring-cloud-starter-consul-config"
	implementation "org.springframework.cloud:spring-cloud-starter-consul-discovery"
	implementation 'org.springframework.boot:spring-boot-starter-groovy-templates'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
	compileOnly 'org.projectlombok:lombok'
	implementation 'com.google.guava:guava:31.1-jre'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'com.yubico:webauthn-server-core:2.4.0'
	implementation 'com.yubico:webauthn-server-attestation:2.4.0'
	implementation 'com.yubico:yubico-util:2.4.0'
	implementation 'com.upokecenter:cbor:4.5.2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.mockito:mockito-junit-jupiter'
	testImplementation 'org.junit.jupiter:junit-jupiter-api'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named('wrapper') {
	distributionType = Wrapper.DistributionType.ALL
}

bootBuildImage {
	imageName = "bmd007/${project.name}"
	environment = ["BP_JVM_VERSION": "17"]
}
